include_directories(/opt/anaconda3/include/python3.6m)
link_directories(/opt/anaconda3/lib)
add_executable(bar bar.cpp)
target_link_libraries(bar python3.6m)
add_executable(animation animation.cpp)
target_link_libraries(animation python3.6m)
add_executable(basic basic.cpp)
target_link_libraries(basic python3.6m)
add_executable(fill fill.cpp)
target_link_libraries(fill python3.6m)
add_executable(fill_inbetween fill_inbetween.cpp)
target_link_libraries(fill_inbetween python3.6m)
add_executable(imshow imshow.cpp)
target_link_libraries(imshow python3.6m)
add_executable(minimal minimal.cpp)
target_link_libraries(minimal python3.6m)
add_executable(modern modern.cpp)
target_link_libraries(modern python3.6m)
add_executable(nonblock nonblock.cpp)
target_link_libraries(nonblock python3.6m)
add_executable(quiver quiver.cpp)
target_link_libraries(quiver python3.6m)
add_executable(subplot subplot.cpp)
target_link_libraries(subplot python3.6m)
add_executable(subplot2grid subplot2grid.cpp)
target_link_libraries(subplot2grid python3.6m)
add_executable(surface surface.cpp)
target_link_libraries(surface python3.6m)
add_executable(update update.cpp)
target_link_libraries(update python3.6m)
add_executable(xkcd xkcd.cpp)
target_link_libraries(xkcd python3.6m)