if (EXISTS /opt/anaconda3)
    set(PYTHON_INCLUDE_DIR /opt/anaconda3/include/python3.6m)
    set(PYTHON_LIBRARIES /opt/anaconda3/lib/libpython3.6m.so)
else ()
    find_package(PythonLibs)
    if (NOT PYTHONLIBS_FOUND)
        message(FATAL_ERROR "PYTHONLIBS not found")
    endif ()
endif ()
include_directories(${PYTHON_INCLUDE_DIR})
add_executable(bar bar.cpp)
target_link_libraries(bar ${PYTHON_LIBRARIES})
add_executable(animation animation.cpp)
target_link_libraries(animation ${PYTHON_LIBRARIES})
add_executable(basic basic.cpp)
target_link_libraries(basic ${PYTHON_LIBRARIES})
add_executable(fill fill.cpp)
target_link_libraries(fill ${PYTHON_LIBRARIES})
add_executable(fill_inbetween fill_inbetween.cpp)
target_link_libraries(fill_inbetween ${PYTHON_LIBRARIES})
add_executable(imshow imshow.cpp)
target_link_libraries(imshow ${PYTHON_LIBRARIES})
add_executable(minimal minimal.cpp)
target_link_libraries(minimal ${PYTHON_LIBRARIES})
add_executable(modern modern.cpp)
target_link_libraries(modern ${PYTHON_LIBRARIES})
add_executable(nonblock nonblock.cpp)
target_link_libraries(nonblock ${PYTHON_LIBRARIES})
add_executable(quiver quiver.cpp)
target_link_libraries(quiver ${PYTHON_LIBRARIES})
add_executable(subplot subplot.cpp)
target_link_libraries(subplot ${PYTHON_LIBRARIES})
add_executable(subplot2grid subplot2grid.cpp)
target_link_libraries(subplot2grid ${PYTHON_LIBRARIES})
add_executable(surface surface.cpp)
target_link_libraries(surface ${PYTHON_LIBRARIES})
add_executable(update update.cpp)
target_link_libraries(update ${PYTHON_LIBRARIES})
add_executable(xkcd xkcd.cpp)
target_link_libraries(xkcd ${PYTHON_LIBRARIES})